--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,bluetooth_sensor,gpio_sensor,app_config,rx,pygatt
+keys=root,bluetooth_sensor,gpio_sensor,server_api,app_config,rx,pygatt
 
 [handlers]
 keys=consoleHandler,fileHandler
@@ -22,6 +22,12 @@ propagate=0
 level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=gpio_sensor
+propagate=0
+
+[logger_server_api]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=server_api
 propagate=0
 
 [logger_app_config]
